versions/v3.6.0/doxygen/html/group__utilities.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/group__utilities.html
original_path: doxygen/html/group__utilities.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Utilities

Utilities.
[More...](#details)

| Topics | |
| --- | --- |
|  | [Base64](group__base64.md) |
|  | Base64 encoding/decoding functions. |
|  | [Data Structure APIs](group__datastructure__apis.md) |
|  | [Formatted Output APIs](group__cbprintf__apis.md) |
|  | [JSON](group__json.md) |
|  | [Linear Range](group__linear__range.md) |
|  | The linear range API maps values in a linear range to a range index. |
|  | [Math extras](group__math__extras.md) |
|  | Extra arithmetic and bit manipulation functions. |
|  | [Monochrome Character Framebuffer](group__monochrome__character__framebuffer.md) |
|  | Public Monochrome Character Framebuffer API. |
|  | [Navigation](group__navigation.md) |
|  | Navigation utilities. |
|  | [Time Utility APIs](group__timeutil__apis.md) |
|  | [Utility Functions](group__sys-util.md) |
|  |  |

## Detailed Description

Utilities.

Data Structure APIs

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
