versions/v4.2.0/doxygen/html/group__utilities.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/group__utilities.html
original_path: doxygen/html/group__utilities.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Utilities

Utilities.
[More...](#details)

| Topics | |
| --- | --- |
|  | [Base64](group__base64.md) |
|  | Base64 encoding/decoding functions. |
|  | [COBS (Consistent Overhead Byte Stuffing)](group__cobs.md) |
|  | COBS encoding and decoding functions with custom delimiter support. |
|  | [DSP (Digital Signal Processing)](group__math__dsp.md) |
|  | Digital Signal Processing (DSP) math functions and utilities. |
|  | [Data Structure APIs](group__datastructure__apis.md) |
|  | [Formatted Output APIs](group__cbprintf__apis.md) |
|  | [JSON](group__json.md) |
|  | [Linear Range](group__linear__range.md) |
|  | The linear range API maps values in a linear range to a range index. |
|  | [Math Ilog2 Functions](group__math__ilog2.md) |
|  | Integer log2 utilities for mathematical operations. |
|  | [Math Interpolation Functions](group__math__interpolation.md) |
|  | Linear interpolation utilities for mathematical operations. |
|  | [Math extras](group__math__extras.md) |
|  | Extra arithmetic and bit manipulation functions. |
|  | [Monochrome Character Framebuffer](group__monochrome__character__framebuffer.md) |
|  | Public Monochrome Character Framebuffer API. |
|  | [Navigation](group__navigation.md) |
|  | Navigation utilities. |
|  | [Time Utility APIs](group__timeutil__apis.md) |
|  | [UUID](group__uuid.md) |
|  | [Utility Functions](group__sys-util.md) |
|  |  |

## Detailed Description

Utilities.

Data Structure APIs

- Generated on  for Zephyr API Documentation by [![doxygen](doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
